tests/baselines/reference/parserGenericConstraint3.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint3.ts] ////

parserGenericConstraint3.ts(1,19): error TS2304: Cannot find name 'List'.


==== parserGenericConstraint3.ts (1 errors) ====
    class C<T extends List<T>> {
                      ~~~~
!!! error TS2304: Cannot find name 'List'.
    }